unpackaged/objects/KOL_Territory__c.object
<CustomObject>
  <description>Used to capture KOLs against Territories.</description>
  <fields>
    <fullName>KOL_Area__c</fullName>
    <label>KOL Specialty Areas</label>
    <length>500</length>
    <type>LongTextArea</type>
  </fields>
  <fields>
    <fullName>KOL_Plan__c</fullName>
    <description>Plan for this KOL</description>
    <inlineHelpText>Comments on objectives and utility of KOL</inlineHelpText>
    <label>KOL Plan</label>
    <length>2000</length>
    <type>LongTextArea</type>
  </fields>
  <fields>
    <fullName>KOL_Profession_CH__c</fullName>
    <formula>text(KOL__r.Profession_D_CH__c)</formula>
    <label>KOL Profession (CH)</label>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>KOL_Profession_DEX__c</fullName>
    <formula>TEXT(KOL__r.Profession__c)    &amp; TEXT(KOL__r.Profession_DEX__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>KOL Profession (DEX)</label>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>KOL_Profession__c</fullName>
    <formula>TEXT(KOL__r.Profession__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>KOL Profession</label>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>KOL__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>KOL</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>KOLs - Territories</relationshipLabel>
    <relationshipName>KOL_in_Territories</relationshipName>
    <type>Lookup</type>
  </fields>
  <fields>
    <fullName>Key_Opinion_Leader_D_JP__c</fullName>
    <formula>IF(KOL__r.Key_Opinion_Leader_D_JP__c = TRUE, "はい", "いいえ")</formula>
    <label>Key Opinion Leader (D-.JP)</label>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Study_Group_Organizer_D_JP__c</fullName>
    <formula>IF( KOL__r.Study_Group_Organiser_D_JP__c  = TRUE, "はい", "いいえ")</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Study Group Organizer (D-JP)</label>
    <type>Text</type>
  </fields>
  <label>KOL - Territory</label>
  <nameField>
    <displayFormat>KOL-{0000}</displayFormat>
    <label>KOL - Territory</label>
    <type>AutoNumber</type>
  </nameField>
  <pluralLabel>KOLs - Territories</pluralLabel>
  <sharingModel>ReadWrite</sharingModel>
</CustomObject>